--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     </header>
     <div class="text-center" style="margin-top: 100px; color: white;">
       <h1 class="h2" style="color:white ;">Ucapan dari aku buat kamu</h1><br>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/xKS5TmkzBic?si=p9oJV1TMNclwF-Km" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/RqqiN45Vq3I?si=BP8rYyQKB4uyLVqh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
     <script>
