--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                   <span>Semoga di tahun ini kamu bisa capai semua mau kamu</span>
                   <span>Semoga kamu selalu diberi kemudahan sama Allah dalam semua masalah yang kamu hadapi</span>
                   <span>Semoga aku bisa nemenin kamu di tahun-tahun selanjutnya</span>
-                  <span>Makasih udah sabar ngehadapin aku,meskipun kadang kamunya juga suka ngeselin</span>
+                  <span>Makasih udah udah mau nemenin aku sampe sekarang</span>
                   <span>Makasih udah ngejalanin hidup kamu dengan baik sampe sekarang</span>
                   <span>Eh iya ada yang ketinggalan,</span>
                   <span>Semoga panjang umur,sehat selalu dan sukses ke depannya</span>
